@@ -1,0 +1,2 @@
+cmake_minimum_required(VERSION 2.6)
+add_subdirectory(cpp)
